plugins/groovy/testdata/highlighting/pre30/negatedInstanceof.groovy
a <error descr="Negated 'instanceof' is not supported in current version">!instanceof</error> Object
